# marstek-local-api-network-relay

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.devcontainer/: devcontainer.json  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: official-docs-researcher.agent.md
.github/workflows/: hacs.yaml  hassfest.yaml  issue-auto-label.yml  release.yaml  tests.yaml
custom_components/marstek/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_action.py  device_info.py  diagnostics.py  discovery.py  icons.json  manifest.json  mode_config.py  power.py  quality_scale.yaml  repairs.py  scanner.py  select.py  sensor.py  services.py  services.yaml  strings.json
docs/: README.md  configuration.md  development.md  energy_dashboard.md  installation.md  marstek_device_openapi.MD  relay.md  services.md
relay_server/: README.md  marstek_relay.py  marstek_relay.service
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_data_parser.py  test_device_action.py  test_device_info.py  test_diagnostics.py  test_discovery.py  test_init.py  test_mock_device.py  test_relay_client.py  test_relay_config_flow.py  test_repairs.py  test_scanner.py  test_select.py  test_sensor.py  test_services.py  test_translations.py  test_udp_client.py  test_validators.py
tests/snapshots/: test_config_flow.ambr
tests/test_mock_device/: test_device.py
tools/: capture_device.py  debug_udp_discovery.py  query_device.py  verify_battery_logic.py
(+49 files in other folders)
