[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marstek"
version = "1.0.0-rc4"
description = "Home Assistant Marstek integration"
requires-python = ">=3.12"
dependencies = ["pymarstek"]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
	"E",
	"F",
	"W",
	"I",
	"UP",
	"B",
	"C4",
	"SIM",
	"RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = false
